--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.5",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
+        "symfony/filesystem": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
